--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "learn_react",
   "version": "1.0.0",
   "description": "learning core React",
-  "main": "App.js",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
@@ -17,11 +18,18 @@
   },
   "homepage": "https://github.com/TheArpita/Learn-React#readme",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.8.2",
     "process": "^0.11.10"
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0"
+  },
+  "browserslist": [
+    "last 2 versions",
+    "maintained node versions"
+  ]
 }
